    Deduplicate file system UUID to prevent unnecessary work.
  * Configure DHCP overrides in Netplan.io.
  * Fix bug in the bonding network interface configuration page.
    The `Primary` field is only used by the `active-backup`,
    `balance-tlb` and `balance-alb` modes.
  * Improve DNS configuration. systemd-resolved is now fully
    responsible for network name resolution.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 19 May 2023 14:54:50 +0200

openmediavault (6.3.12-1) stable; urgency=low

  * Prevent custom network interface search domain settings from
    being overwritten by settings provided via DHCP.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 15 May 2023 20:44:19 +0200

openmediavault (6.3.11-2) stable; urgency=low

  * Update locale files.
  * Upgrade Salt to version 3005.1.
  * Issue #1485: Add option to enforce transport encryption per SMB
    share. Defaults to disabled.
  * Issue #1542: Add transmit hash policy support to bond network
    interfaces.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 25 Apr 2023 19:09:12 +0200

openmediavault (6.3.10-2) stable; urgency=low

  * Issue #1537: `findmnt` is using tree-like output on some systems
    which breaks the parsing of the content.
  * Enhance the UDEV rules to workaround the duplicate serial number
    bug of various disk enclosures. Now the `disk/by-uuid` symlinks
    are created as well if a file system UUID exists.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 22 Apr 2023 10:03:02 +0200

openmediavault (6.3.9-1) stable; urgency=low

  * Add the environment variable `OMV_BTRFS_SCRUB_PERIOD`. The supported
    values are `weekly` and `monthly`. Defaults to `monthly`.
  * Relocate the Cron Btrfs scrubbing script into a separate CLI tool
    named `omv-btrfs-scrub`. If you need to run the scrub jobs at a
    certain date, you may disable the built-in cron jobs via the
    environment variable `OMV_BTRFS_SCRUB_ENABLED`. Finally, create